2009-03-15 02:14 Sergii Stoian <stoyan255@gmail.com>

	* * Headers/Protocols/Preferences.h: Add new methods.
	* PCPrefController.m: Implemented set/get of preferences value
	dependent. All values are stored in preferences as NSString values 
	and converted upon request to specified type.
	* Modules/Preferences/EditorFSC/PCEditorFSCPrefs.m: Use new methods of
	PCPrefController. Implemented setting of editor fonts.
	(setDefaults): Removed.

	* Modules/Preferences/Build/PCBuildPrefs.m,
	* Modules/Preferences/Misc/PCMiscPrefs.m,
	* Modules/Preferences/Saving/PCSavingPrefs.m: Use new methods of
	PCPrefController.
	(setDefaults): Removed.

	* Framework/PCProjectLoadedFiles.m,
	* Framework/PCMakefileFactory.m,
	* Framework/PCProject.m,
	* Framework/PCProjectLauncherPanel.m,
	* Framework/PCFileManager.m,
	* Framework/PCProjectBrowser.m,
	* Framework/PCProjectBuilder.m,
	* Framework/PCEditorManager.m,
	* Framework/PCProjectLoadedFilesPanel.m,
	* Framework/PCProjectLauncher.m,
	* Framework/PCProjectBuilderPanel.m,
	* Framework/PCProjectWindow.m,
	* PCAppController.m,
	* Framework/PCProjectManager.m: Use new methods of PCPrefController.

2009-03-05 02:43 Sergii Stoian <stoyan255@gmail.com>

	* ChangeLog: Update.
	* Modules/Preferences/Misc/PCMiscPrefs.h,
	* Modules/Preferences/Misc/PCMiscPrefs.m,
	* Modules/Preferences/Misc/Resources/MiscPrefs.gorm/data.classes,
	* Modules/Preferences/Misc/Resources/MiscPrefs.gorm/objects.gorm:
	Add new setting UseTearOffWindows.
	* Framework/PCProjectWindow.m: Use new setting.
	* Modules/Editors/ProjectCenter/PCEditor.m:
	(dealloc): Add releasing _window.
	* Documentation/TODO: Update.

2009-03-05 01:01 Sergii Stoian <stoyan255@gmail.com>

	* Framework/PCProjectManager.m:
	(convertLegacyProject:atPath:): Correctly convert legacy application
	project.
	* Framework/PCEditorManager.m;
	(openEditorForFile:editable:windowed:): Don't open lert panel if file
	is not text file. Situation when editor for non text files called to 