@@ -131,9 +131,8 @@
   
   currentProject = rootProject;
 
-/*  PCLogInfo(self, @"activeProjectDidChange to: %@", 
-	    [rootProject projectName]);*/
-  NSLog(@"activeProjectDidChange to: %@", [rootProject projectName]);
+//  NSLog(@"Buider Panel: activeProjectDidChange to: %@",
+//	[rootProject projectName]);
 
   if (!rootProject)
     {
